Fixes the Issues in landing page and footer

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     - custom css link
   -->
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="styles.css">
 
   <!-- 
     - preload images
@@ -252,7 +253,7 @@
               <img src="https://abhiram.sirv.com/609%20Workved/assets/sunmill-loc_batcheditor_fotor%20(1).avif?format=webp" width="1880" height="950" alt="" class="img-cover">
             </div>
 
-            <p class="label-2 section-subtitle slider-reveal newHero2">Classic Elegance</p>
+            <p class="label-2 section-subtitle slider-reveal newHero2" id="classic-elegance">Classic Elegance</p>
 
             <h1 class="display-1 hero-title slider-reveal newHero">
               Create Your Space <br>
@@ -279,7 +280,7 @@
               <img src="https://abhiram.sirv.com/609%20Workved/assets/heroLocation%20(1).avif?format=webp" width="1880" height="950" alt="" class="img-cover">
             </div>
 
-            <p class="label-2 section-subtitle slider-revea newHero2">delightful experience</p>
+            <p class="label-2 section-subtitle slider-revea newHero2" id="classic-elegance">delightful experience</p>
 
             <h1 class="display-1 hero-title slider-reveal newHero">
               Transforming offices into <br>
@@ -307,7 +308,7 @@
 
             </div>
 
-            <p class="label-2 section-subtitle slider-reveal newHero2">amazing & elegence</p>
+            <p class="label-2 section-subtitle slider-reveal newHero2" id="classic-elegance">amazing & elegence</p>
 
             <h1 class="display-1 hero-title slider-reveal newHero ">
               Where Every Floor <br>
@@ -766,7 +767,7 @@
 
         </div>
 
-        <ul class="footer-list">
+        <ul class="footer-list footer-list-left">
 
           <li>
             <a href="#" class="label-2 footer-link hover-underline">Home</a>
@@ -778,7 +779,7 @@
 
         </ul>
 
-        <ul class="footer-list">
+        <ul class="footer-list footer-list-right">
 
           <li>
             <a href="#" class="label-2 footer-link hover-underline">Facebook</a>
