Fix: Updated blogpost4.html[Layout rendering issue]

--- a/blogpost4.html
+++ b/blogpost4.html
@@ -604,204 +604,251 @@
         </style>
 
         <!-- PHILOSOPHY SECTION -->
-        <section class="section text-center philosophy-section">
+        <section class="philosophy-section">
+          <div class="curve-top">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+              <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+            </svg>
+          </div>
+
           <div class="philosophy-container">
-            <div class="curve-top">
-              <svg
-                data-name="Layer 1"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 1200 120"
-                preserveAspectRatio="none"
-              >
-                <path
-                  d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                  class="shape-fill"
-                ></path>
-              </svg>
-            </div>
             <div class="card-container">
-              <div class="card">
-                <img
-                  src="assets/images/divider.jpg"
-                  alt=""
-                  class="card-heading-img"
-                />
-                <h1 class="philosophy-heading">Deciding Factors In a Space</h1>
+              <div class="card main-card">
+                <div class="card-inner">
+                  <div class="decorative-line"></div>
+                  <h1 class="philosophy-heading">Deciding Factors In a Space</h1>
+                  <div class="decorative-line"></div>
+                </div>
               </div>
+
               <div class="card">
-                <img
-                  src="assets/images/divider.jpg"
-                  alt=""
-                  class="card-heading-img"
-                />
-                <h3 class="card-heading container">Functionality and Flow</h3>
-                <p class="card-content container">
-                  Any space should promote effective workflows, allowing easy
-                  transitions between various types of work, like collaboration,
-                  focused work, and relaxation. The physical layout impacts
-                  efficiency, and creating smooth transitions can reduce
-                  friction and support creativity.
-                </p>
+                <div class="card-inner">
+                  <div class="decorative-line"></div>
+                  <h3 class="card-heading">Functionality and Flow</h3>
+                  <p class="card-content">
+                    Any space should promote effective workflows, allowing easy transitions between various types of work, like collaboration, focused work, and relaxation. The physical layout impacts efficiency, and creating smooth transitions can reduce friction and support creativity.
+                  </p>
+                </div>
               </div>
+
               <div class="card">
-                <img
-                  src="assets/images/divider.jpg"
-                  alt=""
-                  class="card-heading-img"
-                />
-                <h3 class="card-heading container">Sustainability</h3>
-                <p class="card-content container">
-                  Environmentally conscious design choices reflect a commitment
-                  to sustainability. Using energy-efficient lighting, recyclable
-                  materials, and indoor plants can reduce an office's ecological
-                  footprint and align with values that attract environmentally
-                  conscious employees.
-                </p>
+                <div class="card-inner">
+                  <div class="decorative-line"></div>
+                  <h3 class="card-heading">Sustainability</h3>
+                  <p class="card-content">
+                    Environmentally conscious design choices reflect a commitment to sustainability. Using energy-efficient lighting, recyclable materials, and indoor plants can reduce an office's ecological footprint and align with values that attract environmentally conscious employees.
+                  </p>
+                </div>
               </div>
+
               <div class="card">
-                <img
-                  src="assets/images/divider.jpg"
-                  alt=""
-                  class="card-heading-img"
-                />
-                <h3 class="card-heading container">
-                  Balance between technology and Humanity
-                </h3>
-                <p class="card-content container">
-                  Integration between technology seamlessly into the workspace
-                  to enhance productivity but shouldn’t overlook the human
-                  experience. Thoughtful integration ensures tech enhances
-                  rather than overwhelms, preserving human connection and
-                  engagement in the process.
-                </p>
+                <div class="card-inner">
+                  <div class="decorative-line"></div>
+                  <h3 class="card-heading">Balance between Technology and Humanity</h3>
+                  <p class="card-content">
+                    Integration between technology seamlessly into the workspace to enhance productivity but shouldn't overlook the human experience. Thoughtful integration ensures tech enhances rather than overwhelms, preserving human connection and engagement in the process.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
+
           <div class="curve-bottom">
-            <svg
-              data-name="Layer 1"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 1200 120"
-              preserveAspectRatio="none"
-            >
-              <path
-                d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                class="shape-fill"
-              ></path>
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+              <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
             </svg>
           </div>
         </section>
 
         <style>
-          .card-container {
-            display: grid;
+        .philosophy-section {
+          background: linear-gradient(135deg, #1a1a1a 0%, #2e3033 50%, #1a1a1a 100%);
+          padding: 100px 20px;
+          position: relative;
+          min-height: 100vh;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          overflow: hidden;
+        }
+
+        .philosophy-container {
+          max-width: 1400px;
+          width: 100%;
+          margin: 0 auto;
+          padding: 20px;
+          z-index: 1;
+        }
+
+        .card-container {
+          display: grid;
+          grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+          gap: 30px;
+          margin-top: 40px;
+        }
+
+        .card {
+          position: relative;
+          background: rgba(255, 255, 255, 0.03);
+          border-radius: 20px;
+          overflow: hidden;
+          transition: all 0.5s ease;
+          animation: fadeIn 0.5s ease-out;
+        }
+
+        .card-inner {
+          padding: 35px;
+          border: 1px solid rgba(255, 255, 255, 0.1);
+          border-radius: 20px;
+          height: 100%;
+          backdrop-filter: blur(10px);
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          position: relative;
+        }
+
+        .card:hover {
+          transform: translateY(-10px);
+          box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+        }
+
+        .card:hover .card-inner {
+          border-color: rgba(255, 184, 108, 0.5);
+        }
+
+        .decorative-line {
+          width: 80px;
+          height: 2px;
+          background: linear-gradient(90deg, transparent, rgba(255, 184, 108, 0.8), transparent);
+          margin: 15px 0;
+        }
+
+        .main-card {
+          grid-column: 1 / -1;
+          text-align: center;
+        }
+
+        .philosophy-heading {
+          font-size: clamp(2.5rem, 5vw, 3.5rem);
+          font-weight: bold;
+          background: linear-gradient(135deg, #ffb86c 0%, #ffd700 100%);
+          -webkit-background-clip: text;
+          background-clip: text;
+          color: transparent;
+          text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+          margin: 20px 0;
+          line-height: 1.2;
+        }
+
+        .card-heading {
+          font-size: clamp(1.5rem, 2vw, 1.8rem);
+          font-weight: bold;
+          background: linear-gradient(135deg, #ffb86c 0%, #ffd700 100%);
+          -webkit-background-clip: text;
+          background-clip: text;
+          color: transparent;
+          margin: 15px 0;
+          text-align: center;
+          line-height: 1.3;
+        }
+
+        .card-content {
+          color: rgba(255, 255, 255, 0.9);
+          font-size: 1.1rem;
+          line-height: 1.6;
+          text-align: center;
+          margin: 0;
+        }
+
+        .curve-top,
+        .curve-bottom {
+          position: absolute;
+          width: 100%;
+          overflow: hidden;
+          line-height: 0;
+          left: 0;
+        }
+
+        .curve-top {
+          top: 0;
+        }
+
+        .curve-bottom {
+          bottom: 0;
+          transform: rotate(180deg);
+        }
+
+        .curve-top svg,
+        .curve-bottom svg {
+          position: relative;
+          display: block;
+          width: calc(100% + 1.3px);
+          height: 80px;
+          filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.3));
+        }
+
+        .curve-top .shape-fill {
+          fill: #161718;
+        }
+
+        .curve-bottom .shape-fill {
+          fill: #212121;
+        }
+
+        @keyframes fadeIn {
+          from {
+            opacity: 0;
+            transform: translateY(20px);
           }
+          to {
+            opacity: 1;
+            transform: translateY(0);
+          }
+        }
+
+        /* Glowing effect */
+        .card::before {
+          content: '';
+          position: absolute;
+          top: -2px;
+          left: -2px;
+          right: -2px;
+          bottom: -2px;
+          background: linear-gradient(45deg, #ffb86c, transparent, #ffd700);
+          border-radius: 20px;
+          z-index: -1;
+          opacity: 0;
+          transition: opacity 0.3s ease;
+        }
+
+        .card:hover::before {
+          opacity: 0.5;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 1200px) {
+          .card-container {
+            grid-template-columns: repeat(2, 1fr);
+          }
+        }
+
+        @media (max-width: 768px) {
           .card-container {
             grid-template-columns: 1fr;
           }
-          @media (min-width: 600px) {
-            .card-container {
-              grid-template-columns: repeat(2, 1fr);
-            }
-          }
 
-          @media (min-width: 900px) {
-            .card-container {
-              grid-template-columns: repeat(3, 1fr);
-            }
-          }
-          @media (min-width: 1200px) {
-            .card-container {
-              grid-template-columns: repeat(4, 1fr);
-            }
-          }
           .philosophy-section {
-            background-color: #2e3033;
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-          .philosophy-container {
-            width: 95vw;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-          .philosophy-heading {
-            font-size: 3em;
-            font-weight: bold;
-            color: hsl(38, 61%, 55%);
-            text-shadow: 1px 0px 0px hsl(38, 61%, 50%),
-              4px 0px 0px hsl(38, 61%, 45%), 3px 0px 0px hsl(38, 61%, 40%),
-              5px 0px 0px hsl(38, 61%, 35%), 5px 0px 0px hsl(38, 61%, 30%),
-              6px 0px 0px hsl(38, 61%, 25%);
-            line-height: 1.25em;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-          .curve-top {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            overflow: hidden;
-            line-height: 0;
+            padding: 60px 15px;
           }
 
-          .curve-top svg {
-            position: relative;
-            display: block;
-            width: calc(100% + 1.3px);
-            height: 200px;
-            transform: rotateY(180deg);
+          .card-inner {
+            padding: 25px;
           }
-
-          .curve-top .shape-fill {
-            fill: #161718;
-          }
-
-          .card {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            background-color: transparent;
-            height: 50vh;
-          }
-
-          .card-heading {
-            color: hsl(38, 61%, 55%);
-            font-size: 2.5rem;
-            font-weight: bold;
-          }
-
-          .curve-bottom {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            overflow: hidden;
-            line-height: 0;
-            transform: rotate(180deg);
-            z-index: -1;
-          }
-
-          .curve-bottom svg {
-            position: relative;
-            display: block;
-            width: calc(100% + 1.3px);
-            height: 200px;
-            transform: rotateY(180deg);
-          }
-
-          .curve-bottom .shape-fill {
-            fill: #212121;
-          }
+        }
         </style>
+
+
         <!-- MARKETING SECTION -->
         <section class="section text-center marketing-section">
           <div class="marketing-container container">
