Added a FAQs section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     - custom css link
   -->
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="faq.css">
 
   <!-- 
     - preload images
@@ -617,6 +618,54 @@
           padding: 5px;
         }
       </style>
+
+<!---
+      FAQ SECTION
+-->
+<div class="faqs">
+  <h1>Frequently Asked Questions</h1>
+  <p>Explore answers to your queries about our exclusive and tailored luxury spaces.</p>
+</header>
+
+<section class="faq-section">
+  <div class="faq">
+      <h3 class="faq-question">What types of spaces can I book?</h3>
+      <div class="faq-answer">
+          <p>Our platform offers an exquisite selection of modern offices, creative studios, event venues, and more. Each space blends elegance and functionality to match your needs.</p>
+      </div>
+  </div>
+  <div class="faq">
+      <h3 class="faq-question">How do I book a space?</h3>
+      <div class="faq-answer">
+          <p>Browse our curated collection, select your preferred space, and complete the booking in just a few clicks. Enjoy instant confirmation and a seamless experience.</p>
+      </div>
+  </div>
+  <div class="faq">
+      <h3 class="faq-question">Can I customize a space for my event?</h3>
+      <div class="faq-answer">
+          <p>Absolutely! Many spaces can be tailored to your unique preferences. Contact the host to discuss your specific requirements.</p>
+      </div>
+  </div>
+  <div class="faq">
+      <h3 class="faq-question">What is the cancellation policy?</h3>
+      <div class="faq-answer">
+          <p>Each space has its own cancellation policy, detailed during the booking process. Review the policy carefully before confirming your reservation.</p>
+      </div>
+     
+  </div>
+  <div class="faq">
+      <h3 class="faq-question">Are there any hidden fees?</h3>
+      <div class="faq-answer">
+        <p>All fees, including cleaning and service fees, are transparently displayed during the booking process. There are no hidden charges.</p>
+      </div>
+  </div>
+</section>
+<script src="faq.js"></script>
+<div class="contact-link-container">
+  <p>Couldn't find your answer?
+     <a href="contact.html" class="contact-link">Contact Us</a></p>
+</div>
+</div>
 
 
       <!-- 
