--- a/about.html
+++ b/about.html
@@ -784,7 +784,7 @@
         background-image: url('./assets/images/fae955e3-de29-4d6b-a41a-85563f86a931.avif');
       "
     >
-      <div class="container">
+      <div class="container" style="margin-bottom: -100px;">
         <div class="footer-top grid-list">
           <div class="footer-brand has-before has-after">
             <a href="#" class="logo">
