fixed "Improve text visibility of Home Page text "#89

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 height="950" alt="" class="img-cover">
             </div>
 
-            <p class="label-2 section-subtitle slider-revea newHero2">delightful experience</p>
+            <p class="label-2 section-subtitle slider-reveal newHero2" id="classic-elegance">delightful experience</p>
 
             <h1 class="display-1 hero-title slider-reveal newHero">
               Transforming offices into <br>
@@ -324,7 +324,7 @@
 
             </div>
 
-            <p class="label-2 section-subtitle slider-reveal newHero2">amazing & elegence</p>
+            <p class="label-2 section-subtitle slider-reveal newHero2" id="classic-elegance">amazing & elegence</p>
 
             <h1 class="display-1 hero-title slider-reveal newHero ">
               Where Every Floor <br>
