--- a/blogpost4.html
+++ b/blogpost4.html
@@ -729,8 +729,19 @@
         color: #f1f1f1;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
         text-align: center;
+        transition: transform 0.3s ease, box-shadow 0.3s ease; 
+        border: 2px solid transparent; 
       }
-      
+      .card:hover {
+        transform: translateY(-10px); 
+        box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.5); 
+        border: 2px solid #dba562;
+      }
+      .card:hover .card-heading {
+         font-weight: bolder; 
+         font-size: 22px;
+      }
+
       .divider {
         width: 100%; 
         height: 30px; 
