I have updated Navbar
I have updated animation in navbar using GSAP now its looking good
see and merge

--- a/index.html
+++ b/index.html
@@ -933,7 +933,9 @@
   <!-- 
     - custom js link
   -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="./assets/js/script.js"></script>
+  <script src="index.js"></script>
 
   <!-- 
     - ionicon link
