--- a/signup.html
+++ b/signup.html
@@ -61,6 +61,10 @@
             <input type="Confirm password" placeholder="Confirm Password" required>
             <button type="submit">Sign Up</button>
         </form>
+
+        <h3 style="text-align: center;">
+            Already have an account? <a href="login.html">Login</a>
+        </h3>
        
     </div>
    
