Changes in href

--- a/blogs.html
+++ b/blogs.html
@@ -299,7 +299,7 @@
                       <a href="blogpost1.html">10 Years of 603:How We Are</a>
                     </h3>
 
-                    <a href="#" class="btn-text hover-underline label-2"
+                    <a href="HowWeAre.html" class="btn-text hover-underline label-2"
                       >Read More</a
                     >
                   </div>
@@ -329,7 +329,7 @@
                       <a href="blogpost2.html">Meet Our Team</a>
                     </h3>
 
-                    <a href="#" class="btn-text hover-underline label-2"
+                    <a href="MeetOurTeam.html" class="btn-text hover-underline label-2"
                       >Read More</a
                     >
                   </div>
@@ -362,7 +362,7 @@
                       <a href="blogpost3.html">Our Achievements</a>
                     </h3>
 
-                    <a href="#" class="btn-text hover-underline label-2"
+                    <a href="Achievements.html" class="btn-text hover-underline label-2"
                       >Read More</a
                     >
                   </div>
