--- a/MeetOurTeam.html
+++ b/MeetOurTeam.html
@@ -5,36 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meet Our Team</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .golden { color: rgb(247, 177, 14); }
+        .golden-bg { background-color: rgb(247, 177, 14); }
+        .golden-border { border: 4px solid rgb(247, 177, 14); }
+        .glass-card {
+            background: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(10px);
+            border-radius: 12px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .glass-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
-<body class="bg-gray-100 text-gray-900">
-    <header class="text-center py-10 bg-gray-800 text-white">
-        <h1 class="text-4xl font-bold">Meet Our Team</h1>
-        <p class="text-lg mt-2">Get to know the brilliant minds behind 603 Interiors.</p>
+<body class="bg-black text-gray-900">
+    <header class="text-center py-24 bg-gradient-to-r from-gray-900 to-gray-700 text-white relative">
+        <h1 class="text-6xl font-extrabold golden animate-pulse">Meet Our Team</h1>
+        <p class="text-xl mt-4 text-gray-300 max-w-4xl mx-auto">Get to know the brilliant minds behind 603 Interiors.</p>
     </header>
     
-    <section class="max-w-5xl mx-auto p-6">
-        <h2 class="text-2xl font-semibold mb-6 text-center">Our Experts</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-            <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                <img src="./assets/images/founder.png" alt="Team Member" class="w-32 h-32 mx-auto rounded-full mb-4">
-                <h3 class="text-xl font-semibold">John Doe</h3>
-                <p class="text-gray-700">Founder & CEO</p>
+    <section class="max-w-6xl mx-auto px-6 py-16">
+        <h2 class="text-4xl font-bold mb-10 text-center golden">Our Experts</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 ">
+            <div class="bg-gray-800 p-8 rounded-lg shadow-lg text-center hover:scale-105 transition-transform">
+                <img src="./assets/images/founder.png" alt="Team Member" class="w-full h-60 object-cover rounded-lg mb-6 golden-border">
+                <h3 class="text-2xl font-semibold golden">John Doe</h3>
+                <p class="text-gray-700 font-bold text-white">Founder & CEO</p>
+                <p class="text-gray-600 mt-4 text-white">Experience: 15+ years in workspace design and business leadership.</p>
+                <p class="text-gray-600  text-white">Previous Work: Led multiple successful office transformations worldwide.</p>
             </div>
-            <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                <img src="./assets/images/designer.png" alt="Team Member" class="w-32 h-32 mx-auto rounded-full mb-4">
-                <h3 class="text-xl font-semibold">Jane Smith</h3>
-                <p class="text-gray-700">Head of Design</p>
+            <div class="bg-gray-800 p-8 rounded-lg shadow-lg text-center hover:scale-105 transition-transform">
+                <img src="./assets/images/designer.png" alt="Team Member" class="w-full h-60 object-cover rounded-lg mb-6 golden-border">
+                <h3 class="text-2xl font-semibold golden">Jane Smith</h3>
+                <p class="text-gray-700 font-bold text-white">Head of Design</p>
+                <p class="text-gray-600 mt-4 text-white">Experience: 10+ years in interior design and architectural planning.</p>
+                <p class="text-gray-600 text-white">Previous Work: Designed award-winning commercial spaces and luxury interiors.</p>
             </div>
-            <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                <img src="./assets/images/manager.png" alt="Team Member" class="w-32 h-32 mx-auto rounded-full mb-4">
-                <h3 class="text-xl font-semibold">Michael Brown</h3>
-                <p class="text-gray-700">Project Manager</p>
+            <div class="bg-gray-800 p-8 rounded-lg shadow-lg text-center hover:scale-105 transition-transform">
+                <img src="./assets/images/manager.png" alt="Team Member" class="w-full h-60 object-cover rounded-lg mb-6 golden-border">
+                <h3 class="text-2xl font-semibold golden">Michael Brown</h3>
+                <p class="text-gray-700 font-bold text-white">Project Manager</p>
+                <p class="text-gray-600 mt-4 text-white">Experience: 12+ years in project management and operations.</p>
+                <p class="text-gray-600 text-white">Previous Work: Successfully managed large-scale office renovation projects.</p>
             </div>
         </div>
     </section>
     
-    <footer class="text-center py-6 bg-gray-800 text-white">
-        <p>&copy; 2025 603 Interiors. All rights reserved.</p>
+    <footer class="text-center py-10 bg-gray-900 text-white">
+        <p class="text-lg text-gray-400">&copy; 2025 603 Interiors. All rights reserved.</p>
     </footer>
 </body>
 </html>
