--- a/Achievements.html
+++ b/Achievements.html
@@ -5,36 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Achievements</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .golden { color: rgb(247, 177, 14); }
+        .golden-bg { background-color: rgb(247, 177, 14); }
+        .golden-border { border: 4px solid rgb(247, 177, 14); }
+    </style>
 </head>
-<body class="bg-gray-100 text-gray-900">
-    <header class="text-center py-10 bg-gray-800 text-white">
-        <h1 class="text-4xl font-bold">Our Achievements</h1>
-        <p class="text-lg mt-2">Celebrating a decade of excellence and innovation at 603 Interiors.</p>
+<body class="bg-black text-white">
+    <header class="text-center py-20 bg-gray-800 text-white relative">
+        <div class="absolute inset-0 bg-black bg-opacity-40"></div>
+        <div class="relative z-10">
+            <h1 class="text-7xl font-extrabold golden animate-pulse">Our Achievements</h1>
+            <p class="text-2xl mt-6 text-gray-300 max-w-4xl mx-auto">Celebrating a decade of excellence and innovation at 603 Interiors.</p>
+        </div>
     </header>
     
-    <section class="max-w-5xl mx-auto p-6">
-        <h2 class="text-2xl font-semibold mb-6 text-center">Milestones & Recognitions</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-            <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                <img src="./assets/images/interior.png" alt="Award" class="w-full h-48 object-cover rounded-lg mb-4">
-                <h3 class="text-xl font-semibold">Best Interior Design 2023</h3>
-                <p class="text-gray-700">Recognized for our outstanding contribution to workspace aesthetics and functionality.</p>
-            </div>
-            <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                <img src="./assets/images/offices.png" alt="Office Design" class="w-full h-48 object-cover rounded-lg mb-4">
-                <h3 class="text-xl font-semibold">Over 500 Projects Completed</h3>
-                <p class="text-gray-700">Successfully designed and delivered innovative office spaces worldwide.</p>
-            </div>
-            <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                <img src="./assets/images/team.png" alt="Team Success" class="w-full h-48 object-cover rounded-lg mb-4">
-                <h3 class="text-xl font-semibold">Expanding Our Team</h3>
-                <p class="text-gray-700">Grown into a global team of passionate designers, architects, and innovators.</p>
-            </div>
+    <section class="max-w-7xl mx-auto px-6 py-16 grid md:grid-cols-3 gap-10">
+        <div class="bg-gray-800 p-8 rounded-lg shadow-lg text-center hover:scale-105 transition-transform">
+            <img src="./assets/images/interior.png" alt="Award" class="w-full h-60 object-cover rounded-lg mb-6 golden-border">
+            <h3 class="text-2xl font-semibold golden">Best Interior Design 2023</h3>
+            <p class="mt-4 text-gray-300">Recognized for our outstanding contribution to workspace aesthetics and functionality.</p>
+        </div>
+        <div class="bg-gray-800 p-8 rounded-lg shadow-lg text-center hover:scale-105 transition-transform">
+            <img src="./assets/images/offices.png" alt="Office Design" class="w-full h-60 object-cover rounded-lg mb-6 golden-border">
+            <h3 class="text-2xl font-semibold golden">Over 500 Projects Completed</h3>
+            <p class="mt-4 text-gray-300">Successfully designed and delivered innovative office spaces worldwide.</p>
+        </div>
+        <div class="bg-gray-800 p-8 rounded-lg shadow-lg text-center hover:scale-105 transition-transform">
+            <img src="./assets/images/team.png" alt="Team Success" class="w-full h-60 object-cover rounded-lg mb-6 golden-border">
+            <h3 class="text-2xl font-semibold golden">Expanding Our Team</h3>
+            <p class="mt-4 text-gray-300">Grown into a global team of passionate designers, architects, and innovators.</p>
         </div>
     </section>
     
-    <footer class="text-center py-6 bg-gray-800 text-white">
-        <p>&copy; 2025 603 Interiors. All rights reserved.</p>
+    <footer class="text-center py-10 bg-gray-900 text-white">
+        <p class="text-lg text-gray-400">&copy; 2025 603 Interiors. All rights reserved.</p>
     </footer>
 </body>
 </html>
