Updated copywrite year

--- a/MeetOurTeam.html
+++ b/MeetOurTeam.html
@@ -56,7 +56,7 @@
     </section>
     
     <footer class="text-center py-10 bg-gray-900 text-white">
-        <p class="text-lg text-gray-400">&copy; 2025 603 Interiors. All rights reserved.</p>
+        <p class="text-lg text-gray-400">&copy; <script>document.write(new Date().getFullYear());</script> 603 Interiors. All rights reserved.</p>
     </footer>
 </body>
 </html>
