--- a/contact.html
+++ b/contact.html
@@ -835,7 +835,7 @@
           <div class="footer-bottom">
     
             <p class="copyright">
-              &copy; 2024 . All Rights Reserved | Crafted by <a href="603thecoworkingspace.com" target="_blank"
+              &copy; <script>document.write(new Date().getFullYear());</script> . All Rights Reserved | Crafted by <a href="603thecoworkingspace.com" target="_blank"
                 class="link">603 The Coworking Space</a>
             </p>
     
