--- a/index.html
+++ b/index.html
@@ -910,8 +910,10 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          &copy; 2024 . All Rights Reserved | Crafted by <a href="603thecoworkingspace.com" target="_blank"
-            class="link">603 The Coworking Space</a>
+          &copy; <script>document.write(new Date().getFullYear());</script> . All Rights Reserved | Crafted by
+          <a href="https://603thecoworkingspace.com" target="_blank" class="link">
+            603 The Coworking Space
+          </a>
         </p>
 
       </div>
